<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainpage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="193dp"
        android:layout_height="111dp"
        android:layout_marginTop="@dimen/rGTop"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RadioButton
            android:id="@+id/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioButton2" />

        <RadioButton
            android:id="@+id/GreenButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioButton3" />

        <RadioButton
            android:id="@+id/RedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/radioButton1" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/time1"
        android:layout_width="@dimen/checkBoxWidth"
        android:layout_height="@dimen/checkBoxHeight"
        android:layout_marginStart="@dimen/checkBoxLeftMargin"
        android:layout_marginTop="@dimen/timeTopMargin"
        android:onClick="onCheckBoxClicked"
        android:text="@string/checkbox1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/date1"
        android:layout_width="@dimen/checkBoxWidth"
        android:layout_height="@dimen/checkBoxHeight"
        android:layout_marginStart="@dimen/checkBoxLeftMargin"
        android:layout_marginTop="@dimen/dateTopMargin"
        android:onClick="onCheckBoxClicked"
        android:text="@string/checkbox2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time1" />

    <TextView
        android:id="@+id/cTextView1"
        android:layout_width="@dimen/checkBoxWidth"
        android:layout_height="@dimen/checkBoxHeight"
        android:layout_marginTop="@dimen/timeTopMargin"
        android:layout_marginEnd="@dimen/cTextViewRightMargin"
        android:text="@string/cTextView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cTextView2"
        android:layout_width="@dimen/checkBoxWidth"
        android:layout_height="@dimen/checkBoxHeight"
        android:layout_marginTop="@dimen/dateTopMargin"
        android:layout_marginEnd="@dimen/cTextViewRightMargin"
        android:text="@string/cTextView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cTextView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="147dp"
        android:layout_height="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="132dp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cbcoLeft"
        android:layout_marginTop="@dimen/cbcoTop"
        android:text="@string/rBTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spinnerRight"
        android:layout_marginBottom="@dimen/spinnerBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="370dp"
        android:layout_height="316dp"
        android:layout_marginEnd="@dimen/picRight"
        android:layout_marginBottom="@dimen/picBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/winter" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/cbcnSide"
        android:layout_marginTop="@dimen/cbcnTop"
        android:onClick="onSwitchClick"
        android:text="@string/switch1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="113dp"
        android:layout_height="95dp"
        android:layout_marginTop="@dimen/spiralTop"
        android:layout_marginEnd="@dimen/spiralRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/spiral" />

</androidx.constraintlayout.widget.ConstraintLayout>